# npu-infer

./: .gitignore  CMakeLists.txt  npu_gemm_runner  test_128  test_correctness  test_ramp1024
1bit/: package.json
bf16_kernel_dev/: CONCLUSION.md  FIRMWARE-NOTES.md  README.md  attn_scalar.cc  build.sh  build_12col.sh  build_2layer_qkv.sh  build_2layer_xclbins.sh  build_all_int8.sh  build_all_int8_i32.sh  build_all_int8_singlecore.sh  build_all_int8_v2.sh  build_all_models.sh  build_batch_d.sh  build_batch_gu.sh  build_batch_o.sh  build_batch_qkv.sh  build_batch_qkv2.sh  build_fused_xclbins.sh  build_gemma4_xclbins.sh  build_i8_xclbin.sh  build_llama_xclbins.sh  build_mt_qkv.sh  build_mt_xclbins.sh  build_n1_bf16.sh  build_patched_driver.sh  build_qkv_fix.sh  build_qwen3_0_6b_xclbins.sh  build_qwen3_8b_xclbins.sh  build_qwen3_vl_xclbins.sh  build_test_kernel.sh  build_v2_direct.sh  build_v2_mlir.sh  build_v3_kernel.sh  build_v3_xclbin.sh  build_xclbin_test.sh  check_mm_info.sh  check_syms.sh  check_types.sh  debug_elf.sh  (+93 more)
docs/: fix-nan-accumulation-2026-06-30.md  flm-bridge-status.md  fusion-level-0.md  model-catalog.md  quantized-kv-benchmarks.md  rewrite-plan.md  unfused-complete.md
include/: buffer.hpp  common.h  device.h  engine.h  flm_bridge.h  gpu_engine.h  model.h  model_config.h  rocm_engine.h  rocm_engine.h.saved
rust/: Cargo.toml  build.rs
src/: dequant_q4nx.c  device.c  engine.cpp  ffi_bridge.cpp  flm_bridge.cpp  gpu_engine.cpp  infer_custom.cpp  kv_quant.cpp  kv_quant.h  main.cpp  model.c  npu_engine_2layer.cpp  npu_engine_batched.cpp  npu_engine_clean.cpp  (+36 more)
(+77 files in other folders)
